Fix cart background
Added clickable background to the cart. When cart link was clicked the cart would hang until you pressed the link again; now, it has a clickable background to leave. Also used the scrollbar width trick to hide overflow.

--- a/42 E-commerce product page/src/css/_main.scss
+++ b/42 E-commerce product page/src/css/_main.scss
@@ -145,7 +145,7 @@ main {
             margin-top: -30px;
             align-items: center;
             justify-content: center;
-            z-index: 99;
+            z-index: 12;
             > svg {
                 width: unset;
                 path {
@@ -213,7 +213,7 @@ main {
         left: 0;
         width: 100vw;
         height: 100vh;
-        z-index: 1;
+        z-index: 15;
         .content {
             width: calc(514px - 4.0625rem *2);
             #lightbox-hero {
