--- a/42 E-commerce product page/src/css/style.scss
+++ b/42 E-commerce product page/src/css/style.scss
@@ -106,8 +106,11 @@ header {
         display: flex;
         align-items: center;
         position: relative;
+        z-index: 15;
         .cart-link {
             // padding: 14px;
+            position: relative;
+            z-index: 13;
             margin-right: 25px;
             border: none;
             border-radius: 50px;
@@ -129,6 +132,7 @@ header {
             width: 50px;
             height: 50px;
             position: relative;
+            // z-index: 13;
             &:after {
                 display: block;
                 border-radius: 50px;
@@ -149,6 +153,15 @@ header {
                 // box-shadow: 0 0 1px 2px $Orange;
             }
         }
+        #cart-form-bg {
+            position: fixed;
+            top: 0;
+            left: 0;
+            height: 100vh;
+            width: 100vw;
+            background-color: rgba(56, 56, 56, 0.192);
+            z-index: 19;
+        }
         #cart-form{
             box-shadow: rgba(0, 0, 0, 0.2) 0px 18px 50px -10px;
             border-radius: 10px;
@@ -160,7 +173,7 @@ header {
             padding: 25px 25px 30px;
             min-width: 350px;
             width: 365px;
-            z-index: 6;
+            z-index: 23;
             hr {
                 margin: 25px -25px 25px;
                 border: none;
